Add contact persons to tenants list
